@@ -1,56 +1,96 @@
 package com.newsletter.user.services;
 
+import com.newsletter.user.enums.Role;
 import com.newsletter.user.models.User;
 import com.newsletter.user.repo.UserRepo;
 import lombok.AllArgsConstructor;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.BeanWrapper;
 import org.springframework.beans.BeanWrapperImpl;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 /**
- * The type User service.
+ * The type User details service.
  */
-@AllArgsConstructor
 @Service
-public class UserServiceImpl implements UserService, UserDetailsService {
+@AllArgsConstructor
+public class UserDetailsServiceImpl implements UserDetailsService {
 
+  @Autowired
   private final UserRepo userRepo;
 
 
   private final BCryptPasswordEncoder bCryptPasswordEncoder = new BCryptPasswordEncoder();
 
-
-  @Override
+  /**
+   * Create user user.
+   *
+   * @param user the user
+   * @return the user
+   */
+  @CachePut(value = "users")
   public User createUser(User user){
     user.setPassword(bCryptPasswordEncoder.encode(user.getPassword()));
     return userRepo.save(user);
   }
 
-  @Override
+
+  /**
+   * Gets all user.
+   *
+   * @return the all user
+   */
+  @Cacheable(value = "users")
   public List<User> getAllUser() {
     return (List<User>)userRepo.findAll();
   }
 
-  @Override
-  public User getUserById(long id) {
+  /**
+   * Gets user by id.
+   *
+   * @param id the id
+   * @return the user by id
+   */
+  @Cacheable(value = "users", key = "#id")
+  public User getUserById(Long id) {
     return userRepo.findById(id).orElseThrow();
   }
 
-  @Override
+  /**
+   * Gets user by email.
+   *
+   * @param email the email
+   * @return the user by email
+   */
+  @Cacheable(value = "users", key = "#email")
   public User getUserByEmail(String email) {
     return userRepo.findByEmail(email).orElseThrow();
   }
 
-  @Override
-  public User updateUser(User newUser, long id) {
-    User user = userRepo.findById(id).orElseThrow();
+  /**
+   * Update user user.
+   *
+   * @param newUser the new user
+   * @param id      the id
+   * @return the user
+   */
+  @Cacheable(value = "users", key = "#id")
+  public User updateUser(User newUser, Long id) {
+    User user = getUserById(id);
     copyNonNull(newUser, user);
     user.setId(id);
     user.setPassword(
@@ -60,12 +100,22 @@ public class UserServiceImpl implements UserService, UserDetailsService {
     return userRepo.save(user);
   }
 
-  @Override
-  public void deleteUser(long id) {
+  /**
+   * Delete user.
+   *
+   * @param id the id
+   */
+  @CacheEvict(value = "users")
+  public void deleteUser(Long id) {
     userRepo.deleteById(id);
   }
 
-  @Override
+  /**
+   * Copy non null.
+   *
+   * @param source      the source
+   * @param destination the destination
+   */
   public void copyNonNull(Object source, Object destination){
     BeanUtils.copyProperties(source, destination,
         getNullPropertyNames(source));
@@ -93,14 +143,14 @@ public class UserServiceImpl implements UserService, UserDetailsService {
         userRepo
             .findByEmail(email)
             .orElseThrow(() -> new UsernameNotFoundException("User not found"))
-            );
+    );
   }
 
   private UserDetails mapUserToUserDetails(User user) {
     return new org.springframework.security.core.userdetails.User(
         user.getEmail(),
         user.getPassword(),
-        Collections.emptyList()
+        List.of(user.getRole())
     );
   }
 
